<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>SeleniumGridCucumberProject</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.21.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.18.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>7.16.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

<!--    <build>-->
<!--        <plugins>-->

<!--            &lt;!&ndash; Failsafe, testin güvenli bir şekilde başarısız olmasına yardımcı olur &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
<!--                <version>3.0.0-M1</version>-->
<!--                <configuration>-->
<!--                    <testFailureIgnore>true</testFailureIgnore>-->
<!--                    <skipTests>false</skipTests>-->
<!--                    <includes>-->
<!--                        <include>**/runners/*TestRunner*.java</include>-->
<!--                    </includes>-->
<!--                </configuration>-->
<!--            </plugin>-->

<!--            &lt;!&ndash; Surefire eklentisi testleri paralel olarak çalıştırmak için kullanılır, paralel çalıştırma ayarları yapılır. &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.0.0-M1</version>-->
<!--                <configuration>-->
<!--                    <parallel>methods</parallel>-->
<!--                    <forkMode>perthread</forkMode>-->
<!--                    <threadCount>3</threadCount>-->
<!--                    <reuseForks>false</reuseForks>-->
<!--                    <argLine>-Duser.language=en</argLine>-->
<!--                    <argLine>-Xmx1024m</argLine>-->
<!--                    <argLine>-XX:MaxPermSize=256m</argLine>-->
<!--                    <argLine>-Dfile.encoding=UTF-8</argLine>-->
<!--                    <useFile>false</useFile>-->
<!--                    <includes>-->
<!--                        <include>Runner.java</include> &lt;!&ndash; Burada çalışacak Runner class belirtilir &ndash;&gt;-->
<!--                    </includes>-->
<!--                    <testFailureIgnore>true</testFailureIgnore>-->
<!--                </configuration>-->
<!--            </plugin>-->


<!--        </plugins>-->

<!--    </build>-->

</project>